<resources>
    <string name="app_name">OASIS_DB</string>
    <string name="UserName_Prof_Search">UserName</string>
    <string name="ProfileNumber_Prof_Search">Profile Number</string>
    <string name="sw_activeProfile">Active Profile</string>
    <string name="btn_ViewAll">View All</string>
    <string name="btn_add">Create Profile</string>
    <string name="phone_Number">Phone Number</string>
    <string name="UserName_Profile_Screen">UserName Profile Screen</string>
    <string name="tv_USER_first_name">First Name</string>
    <string name="tv_USER_last_name">Last Name</string>
    <string name="tv_USER_profileNumber">Profile Number</string>
    <string name="tv_street_address">Street Address</string>
    <string name="tv_city">City</string>
    <string name="tv_name_of_dealership">Name of Dealership</string>
    <string name="tv_year_of_vehicle">Year of Vehicle</string>
    <string name="tv_make_of_vehicle">Make of Vehicle</string>
    <string name="tv_model_of_vehicle">Model of Vehicle</string>
    <string name="tv_vin_number">VIN Number</string>
    <string name="tv_odometer">odometer</string>
    <string name="tv_odometer1">Odometer</string>
    <string name="cb_has_insurance">Has Insurance</string>
    <string name="cb_has_Warranty">Has a Warranty</string>
    <string name="cb_has_roadside_assist">Roadside Assistance</string>
    <string name="cb_has_claims">Has Claims</string>
    <string name="tv_title_loginScreen">OASIS</string>
    <string name="hintForLoginPassword">Enter password</string>
    <string name="btn_Login">Login</string>
    <string name="et_profile_first_name">First Name</string>
    <string name="et_profile_last_name">Last Name</string>
    <string name="et_street_address">Street Address</string>
    <string name="et_garaging_address">Garaging Address</string>
    <string name="et_mailing_address">Mailing Address</string>
    <string name="et_profile_city">City</string>
    <string name="et_profile_state">State</string>
    <string name="etn_profile_zipCode">Zip Code</string>
    <string name="et_profile_phone">Phone</string>
    <string name="et_profile_email">Email</string>
    <string name="et_Territory">Territory</string>
    <string name="sw_has_Vehicle">Has A Vehicle</string>
    <string name="sw_has_insurance">Vehicle Has Insurance</string>
    <string name="sw_has_insurance2">Veh has Ins</string>
    <string name="sw_has_warranty">Veh has Warranty</string>
    <string name="sw_has_insurance3">Veh has Insurance</string>
    <string name="sw_has_claims">Veh has Claims</string>
    <string name="et_profile_password">Profile Password</string>
    <string name="btn_back_button">Back</string>
    <string name="btn_vehicle_info">Vehicle</string>
    <string name="et_dateOfBirth">Date of Birth</string>
    <string name="et_profile_dateOfBirth">Date of Birth</string>
    <string name="et_profile_ID_number">Profile Number</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="btn_save_profile1">Save to Profile</string>
    <string name="cb_profile_activeProfile">Active Profile</string>
    <string name="et_Profile_UserName">"UserName "</string>
    <string name="tv_New_User_Sign_up">New User Sign Up</string>
    <string name="et_Reg_UserName">User Name</string>
    <string name="et_Reg_email">Email</string>
    <string name="et_Reg_Phone">Phone</string>
    <string name="et_Reg_Password">Password</string>
    <string name="et_Reg_zipCode">Zip Code</string>
    <string name="et_Reg_Territory">Territory</string>
    <string name="sw_Reg_Has_Vehicle">Do you have a vehicle?</string>
    <string name="sw_Reg_Has_INS">Do you have Insurance?</string>
    <string name="sw_Reg_HasWarranty">Is your vehicle protected with a Warranty?</string>
    <string name="sw_Reg_HasWarranty1">Does your Vehicle have a Warranty?</string>
    <string name="sw_Reg_AnyClaims">Any Claims</string>
    <string name="sw_Reg_AnyClaims1">Are there any Claims?</string>
    <string name="btn_reg_registration">Register</string>
    <string name="btn_reg_registration">Register</string>
    <string name="tv_already_signedin">Already Signed In?</string>
    <string name="tv_already_have_profile">Already Have Profile?</string>
    <string name="tv_already_have_a_profile">Already have a profile? Back to Login</string>
    <string name="et_reg_user_name">UserName</string>
    <string name="et_reg_password">Password</string>
    <string name="sw_reg_has_ins">Does the vehicle have Insurance?</string>
    <string name="sw_reg_veh_has_ins">Does your vehicle have Insurance?</string>
</resources>