<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8224CDC"
    android:textAlignment="center"
    tools:context=".Registration">

    <EditText
        android:id="@+id/et_reg_user_name"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_reg_user_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_first_name"
        android:layout_width="213dp"
        android:layout_height="28dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_profile_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/et_reg_last_name"
        android:layout_width="213dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_profile_last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_first_name"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/et_reg_street_address"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_street_address"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_user_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_date_of_birth"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_dateOfBirth"
        android:inputType="number|text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_phone"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="211dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="384dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_Reg_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_zip_code"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_city"
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_profile_city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_reg_state"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_street_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_state"
        android:layout_width="79dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="484dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_profile_state"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_street_address"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_phone"
        android:layout_width="210dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="328dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_Reg_Phone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_reg_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_date_of_birth"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_reg_zip_code"
        android:layout_width="105dp"
        android:layout_height="26dp"
        android:layout_marginBottom="468dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_Reg_zipCode"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_city" />

    <EditText
        android:id="@+id/et_reg_territory"
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="476dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/et_Reg_Territory"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_reg_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_state" />

    <Switch
        android:id="@+id/sw_reg_has_vehicle"
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/sw_Reg_Has_Vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_reg_password"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/sw_reg_has_ins"
        android:layout_width="282dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/sw_reg_veh_has_ins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_reg_has_vehicle"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/sw_Reg_HasWarranty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sw_Reg_HasWarranty1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_reg_has_ins"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/sw_Reg_AnyClaims"
        android:layout_width="218dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/sw_Reg_AnyClaims1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_Reg_HasWarranty"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_reg_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/btn_reg_registration"
        android:text="@string/btn_reg_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_Reg_AnyClaims"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/tv_already_signedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_already_have_a_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg_registration" />

</androidx.constraintlayout.widget.ConstraintLayout>